// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Pokemon 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pokemon__details_table"
      >
        <pokemon-abilities
          resistant="Water,Electric,Grass,Fighting,Fairy"
          weaknesses="Fire,Ice,Flying,Psychic"
        />
        <div
          class="pokemon__details_attacks"
        >
          <div
            class="chips"
          >
            <div
              class="chip__text"
            >
              Fast
            </div>
            <pokemon-attacks
              damage="12"
              name="Tackle"
            />
          </div>
          <div
            class="chips"
          >
            <div
              class="chip__text"
            >
              Special
            </div>
            <div>
              <pokemon-attacks
                damage="70"
                name="Power Whip"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pokemon__details_table"
    >
      <pokemon-abilities
        resistant="Water,Electric,Grass,Fighting,Fairy"
        weaknesses="Fire,Ice,Flying,Psychic"
      />
      <div
        class="pokemon__details_attacks"
      >
        <div
          class="chips"
        >
          <div
            class="chip__text"
          >
            Fast
          </div>
          <pokemon-attacks
            damage="12"
            name="Tackle"
          />
        </div>
        <div
          class="chips"
        >
          <div
            class="chip__text"
          >
            Special
          </div>
          <div>
            <pokemon-attacks
              damage="70"
              name="Power Whip"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders Pokemon no attacks 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pokemon__details_table"
      >
        <pokemon-abilities
          resistant="Water,Electric,Grass,Fighting,Fairy"
          weaknesses="Fire,Ice,Flying,Psychic"
        />
        <div
          class="pokemon__details_attacks"
        >
          <div
            class="chips"
          >
            <div
              class="chip__text"
            >
              Special
            </div>
            <div />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pokemon__details_table"
    >
      <pokemon-abilities
        resistant="Water,Electric,Grass,Fighting,Fairy"
        weaknesses="Fire,Ice,Flying,Psychic"
      />
      <div
        class="pokemon__details_attacks"
      >
        <div
          class="chips"
        >
          <div
            class="chip__text"
          >
            Special
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
